--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3339,7 +3339,7 @@ textarea {
 }
 @media (max-width: 767.98px) {
   .about-img-wrap .shape img {
-    display: none;
+    display: block;
   }
 }
 .about__img-wrap-two {
@@ -13262,8 +13262,8 @@ blockquote p {
   border: 2px solid #FDBE39;
   background-color: transparent;
   border-radius: 30px;
-  padding:30px 30px 30px 50px;
-  margin: 200px 0px 200px 20px;
+  padding:60px 60px 60px 80px;
+  margin: 60px 0px 60px 60px;
 }
 .slider_baner_home6 .banner__content-three .title {
   margin-bottom: 10px;
@@ -13272,7 +13272,6 @@ blockquote p {
 .slider_baner_home6 .banner__content-three p {
   margin-bottom: 30px;
   color: #fff;
-  font-size: 20px;
 }
 .slider_baner_home6 .slider__single {
   max-height: 693px;
@@ -14165,7 +14164,7 @@ blockquote p {
   }
   .slider_baner_home6 .banner__content-three {
     padding: 30px 20px 30px 50px;
-    margin: 0px 0px 100px 30px;
+    margin: 0px 0px 30px 30px;
   }
   .slider_baner_home6 .banner__content-three .title {
     font-size: 30px;
@@ -14592,24 +14591,178 @@ blockquote p {
 }/*# sourceMappingURL=main.css.map */
 
 
-.banner-content{
-  position: relative;
-  margin-top: -80px;
-  width: 100%;
-  margin-left: -100px;
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 1500px) {
+  .banner-content{
+    position: relative;
+    margin-bottom: 80px;
+    width: 100%;
+    margin-left: -100px;
+  }
+  
+  .carousel{
+    position: relative;
+    margin-top: -55px;
+    margin-bottom: -80px;
+  }
+  .carousel-control-prev{
+    justify-content: start;
+    padding-left: 50px;
+  }
+  .carousel-control-next{
+    justify-content: start;
+    rotate: 180deg;
+    padding-left: 50px;
+  }
+  .banner-bg{
+    padding: 200px 0 100px;
+  }
+
+
+  .carousel-item img {
+    width: 100%;
+    height: 690px;
+    object-fit: cover;
+  }
+}
+@media (max-width: 1199.98px) {
+  .banner-content{
+    position: relative;
+    margin-top: -80px;
+    width: 100%;
+    margin-left: -100px;
+  }
+  
+  .carousel{
+    position: relative;
+    margin-top: -55px;
+    margin-bottom: -80px;
+  }
+  .carousel-control-prev{
+    justify-content: start;
+    padding-left: 50px;
+  }
+  .carousel-control-next{
+    justify-content: start;
+    rotate: 180deg;
+    padding-left: 50px;
+  }
+  .carousel-item img {
+    width: 100%;
+    height: 690px;
+    object-fit: cover;
+  }
+  
+  .carousel-item img {
+    width: 100%;
+    height: 690px;
+    object-fit: cover;
+  }
+  .banner-bg{
+    padding: 250px 0 100px;
+  }
 }
 
-.carousel{
-  position: relative;
-  margin-top: -55px;
-  margin-bottom: -80px;
+@media (max-width: 991.98px) {
+  .banner-content{
+    position: relative;
+    align-items: center;
+    width: 100%;
+   
+  }
+  
+  .carousel{
+    position: relative;
+    margin-top: -55px;
+    margin-bottom: -80px;
+  }
+  .carousel-control-prev{
+    justify-content: start;
+    padding-left: 50px;
+  }
+  .carousel-control-next{
+    justify-content: start;
+    rotate: 180deg;
+    padding-left: 50px;
+  }
+  .carousel-item img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+  }
+  .banner-bg{
+    padding: 235px 0 100px;
+  }
 }
-.carousel-control-prev{
-  justify-content: start;
-  padding-left: 50px;
+@media (max-width: 768px) {
+  .banner-content{
+    position: relative;
+    align-items: center;
+    width: 100%;
+    
+  }
+  
+  .carousel{
+    position: relative;
+    margin-top: -55px;
+    margin-bottom: -80px;
+  }
+  .carousel-control-prev{
+    justify-content: start;
+    padding-left: 50px;
+  }
+  .carousel-control-next{
+    justify-content: start;
+    rotate: 180deg;
+    padding-left: 50px;
+  }
+  .banner-bg{
+    padding: 235px 0 100px;
 }
-.carousel-control-next{
-  justify-content: start;
-  rotate: 180deg;
-  padding-left: 50px;
+
+
+@media (max-width: 575px) {
+  .banner-content{
+    position: relative;
+    margin-bottom: -10px;
+   align-items: center;
+    width: 100%;
+    
+   
+  }
+
+  .carousel-item img {
+    width: 100%;
+    height: 450px;
+    object-fit: cover;
+  }
+ 
+  
+  .carousel{
+    position: relative;
+    margin-top: -55px;
+    margin-bottom: -80px;
+  }
+  .carousel-control-prev{
+    justify-content: start;
+    padding-left: 50px;
+  }
+  .carousel-control-next{
+    justify-content: start;
+    rotate: 180deg;
+    padding-left: 50px;
+  }
+  .banner-bg{
+    padding: 100px 0 100px;
+  }
 }
