--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14766,3 +14766,42 @@ blockquote p {
     padding: 100px 0 100px;
   }
 }
+
+@media (max-width: 375px) {
+  .banner-content{
+    position: relative;
+    margin-bottom: 50px;
+    margin-left:0px;
+   align-items: center;
+    width: 100%;
+    
+   
+  }
+
+  .carousel-item img {
+    width: 100%;
+    height: 700px;
+    object-fit: cover;
+  }
+ 
+  
+  .carousel{
+    position: relative;
+    margin-top: -50px;
+    margin-bottom: -80px;
+  }
+  .carousel-control-prev{
+    justify-content: start;
+    padding-left: 50px;
+  }
+  .carousel-control-next{
+    justify-content: start;
+    rotate: 180deg;
+    padding-left: 50px;
+  }
+  .banner-bg{
+    position: relative;
+    padding:155px 0 100px;
+  }
+}
+
