--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14637,8 +14637,7 @@ blockquote p {
   .banner-content{
     position: relative;
    margin: 0;
-    width: 100%;
-    
+    width: 100%; 
   }
   
   .carousel{
@@ -14778,13 +14777,12 @@ blockquote p {
 
   .carousel-item img {
     width: 100%;
-    height: 100px;
+    height: 500px;
     object-fit: cover;
   }
   .carousel{
     position: relative;
-    margin-top: -50px;
-    margin-bottom: -80px;
+   margin: 0;
   }
   .carousel-control-prev{
     justify-content: start;
@@ -14827,8 +14825,7 @@ blockquote p {
   }
   .carousel{
     position: relative;
-    margin-top: -50px;
-    margin-bottom: -80px;
+   margin: 0;
   }
   .carousel-control-prev{
     justify-content: start;
