--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3339,7 +3339,7 @@ textarea {
 }
 @media (max-width: 767.98px) {
   .about-img-wrap .shape img {
-    display: block;
+    display: none;
   }
 }
 .about__img-wrap-two {
@@ -14732,8 +14732,8 @@ blockquote p {
 @media (max-width: 575px) {
   .banner-content{
     position: relative;
-    margin-left: 1px;
-    margin-bottom: -18px;
+    /* margin-left: 1px; */
+    /* margin-bottom: -18px; */
    align-items: center;
     width: 100%;
     
@@ -14742,7 +14742,7 @@ blockquote p {
 
   .carousel-item img {
     width: 100%;
-    height: 450px;
+    height: 495px;
     object-fit: cover;
   }
  
@@ -14761,14 +14761,14 @@ blockquote p {
     padding-left: 50px;
   }
   .banner-bg{
-    padding: 20px 0 0px;
+    padding: 65px 0 0px;
   }
 }
 
 @media (max-width: 425px) {
   .banner-content{
     position: relative;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     /* margin-left:19px; */
    align-items: center;
     width: 100%;
@@ -14776,7 +14776,7 @@ blockquote p {
 
   .carousel-item img {
     width: 100%;
-    height: 500px;
+    height: 575px;
     object-fit: cover;
   }
   .carousel{
@@ -14794,7 +14794,7 @@ blockquote p {
   }
   .banner-bg{
     position: relative;
-    padding:75px 0 0px;
+    padding:105px 0 0px;
   }
 }
 
@@ -14811,14 +14811,11 @@ blockquote p {
   }
 
   .banner-content .title {
-    font-size: 22px;
+    font-size: 20px;
   }
-
-
-
   .carousel-item img {
     width: 100%;
-    height: 400px;
+    height: 450px;
     object-fit: cover;
   }
   .carousel{
@@ -14827,7 +14824,7 @@ blockquote p {
   }
   .carousel-control-prev{
     justify-content: start;
-    padding-left: 50px;
+     */
   }
   .carousel-control-next{
     justify-content: start;
@@ -14836,7 +14833,7 @@ blockquote p {
   }
   .banner-bg{
     position: relative;
-    padding:0px 0 20px;
+    padding:40px 0 20px;
   }
 }
 
